--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 .MultiSelectContainer {
-  display: grid;
-  max-width: 500px;
-  margin: 0 auto;
+	display: grid;
+	max-width: 600px;
+	margin: 0 auto;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
