--- a/src/App.scss
+++ b/src/App.scss
@@ -2,5 +2,5 @@
 	display: grid;
 	max-width: 600px;
 	margin: 0 auto;
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-family: 'Roboto', '-apple-system', 'BlinkMacSystemFont', 'Helvetica Neue', 'Helvetica' , 'sans-serif';
 }
