--- a/src/multiSelectAdvanced/MultiSelectAdvanced.scss
+++ b/src/multiSelectAdvanced/MultiSelectAdvanced.scss
@@ -3,6 +3,18 @@ $spinnerSize: 16px;
 $spinnerThickness: 1px;
 $desktop-breakpoint: 1024px;
 
+// Colours
+$grey: #e6e6e6;
+$greyLight: #f0f0f0;
+$greyDark: #d6d6d6;
+$greyDarkest: #b4b4b4;
+$blue: #2684ff;
+$red: #de350b;
+$redLight: #ffbdad;
+
+// Radius
+$radius : 2px;
+
 // Min Desktop
 @mixin minDesktop {
 	@media only screen and (min-width: #{$desktop-breakpoint + 1}) {
@@ -12,49 +24,36 @@ $desktop-breakpoint: 1024px;
 
 // Custom scroll bar
 @mixin scrollBarStyle {
-	@include minDesktop {
-		&::-webkit-scrollbar {
-			width: .5em;
-			height: .5em;
-			background: #F2F2F2;
-			border-radius: 3px;
-		}
 
-		&::-webkit-scrollbar-track {
-			box-shadow: inset 0 0 6px #DEDEDE;
+	@include minDesktop {
+
+		&::-webkit-scrollbar {
+			width: 10px;
+			background: $greyLight;
+			border-radius: $radius;
+			cursor: pointer;
 		}
 
 		&::-webkit-scrollbar-thumb {
-			background-color: #C1C1C1;
-			border: 1px #C1C1C1 solid;
-			border-radius: 3px;
-			border-top-width: 2px;
-			border-bottom-width: 2px;
+			background-color: $greyDark;
+			border-radius: $radius;
 			
 			&:hover {
-				background-color: #9B9B9B;
-				border-color: #9B9B9B;
+				background-color: $greyDarkest;
 			}
 		}
 	}
 }
 
+// Loading spinner
 @mixin loadingSpinner {
 	border-radius: 50%;
 	width: $spinnerSize;
 	height: $spinnerSize;
-	margin: 0 auto;
-	font-size: 10px;
 	position: relative;
-	text-indent: -9999em;
-	border-top: $spinnerThickness solid rgba(255, 255, 255, 0.2);
-	border-right: $spinnerThickness solid rgba(255, 255, 255, 0.2);
-	border-bottom: $spinnerThickness solid rgba(255, 255, 255, 0.2);
-	border-left: $spinnerThickness solid #000;
-	-webkit-transform: translateZ(0);
-	-ms-transform: translateZ(0);
+	border: $spinnerThickness solid transparent;
+	border-left: $spinnerThickness solid $blue;
 	transform: translateZ(0);
-	-webkit-animation: loadingSpin 1.1s infinite linear;
 	animation: loadingSpin 1.1s infinite linear;
 	overflow: hidden;
 
@@ -65,67 +64,65 @@ $desktop-breakpoint: 1024px;
 	}
 }
 
+// Clear all button
 @mixin clearAllButton {
 	padding: 4px;
-	background-color: #f1f1f1;
-	border-radius: 4px;
-	white-space: nowrap;
-	margin: 0 4px 4px 0;
-	background-color: #ff8b8b;
-	color: #fff;
-	cursor: pointer;
+    cursor: pointer;
+    fill: $redLight;
+    height: calc(1em + 10px);
 
 	&:hover,
 	&:focus,
 	&:focus-visible {
 		outline: none;
-		background-color: #f84848;
+		fill: $red;
 	}
 }
 
+// Delete button
 @mixin deleteButton {
 	position: relative;
 	display: block;
 	width: 16px;
 	height: 16px;
-	font-size: 12px;
+	font-size: 80%;
 	text-align: center;
-	color: #fff;
+	color: $greyDark;
 	cursor: pointer;
-	background-color: #6495ed;
-	border-radius: 4px;
+	border-radius: $radius;
 
 	&:hover {
-		background-color: #4c83e9;
+		background-color: $red;
+
+		&:before,
+		&:after {
+			background-color: #fff;
+		}
 	}
 
 	&:before,
 	&:after {
 		position: absolute;
 		left: 7px;
-		top: 2px;
+		top: 3px;
 		content: ' ';
-		height: 12px;
+		height: 10px;
 		width: 2px;
-		background-color: #fff;
-		border-radius: 1px;
+		border-radius: $radius;
+		background-color: $greyDarkest;
 	}
 
-	&:before {
-		transform: rotate(45deg);
-	}
+	&:before { transform: rotate(45deg); }
 
-	&:after {
-		transform: rotate(-45deg);
-	}
+	&:after { transform: rotate(-45deg); }
 }
 
-.MultiSelectAdvanced {
+.Msa {
 	width: 100%; // Should relative to parent to keep width responsive
 	min-width: 150px; // Minimum space required by component
 	height: min-content; // Prevents auto height expand
-	font-family: inherit;
-	font-size: 14px;
+	font-family: inherit; // Use inherited font style
+	font-size: inherit; // Use inherited font size
 
 	// Make sure everything border-box for correct calculations
 	* { box-sizing: border-box; }
@@ -158,26 +155,20 @@ $desktop-breakpoint: 1024px;
 		border: 1px #d4d4d4 solid;
 		background: #fff;
 		padding: 4px;
-		border-radius: 4px;
+		border-radius: $radius;
 
 		&:focus-within {
-			border: 1px solid #a7a7a7;
+			border: 1px solid $blue;
 		}
 
 		&--invalid {
-			border: 1px solid #ff0000;
+			border: 1px solid $red;
 		}
 
 		input {
 			border: 0;
-			height: 100%;
-			width: 100%;
-			font-size: 14px;
-
-			&:focus {
-				border: 0;
-				outline: 0;
-			}
+			font-size: 100%;
+			&:focus { outline: 0; }
 		}
 	}
 
@@ -185,20 +176,18 @@ $desktop-breakpoint: 1024px;
 	&_SelectionList {
 		display: block;
 		list-style-type: none;
-		margin: 8px 0 0 0;
+		margin: 6px 0 0 0;
 		padding: 0;
 		width: 100%;
 
 		// List items
 		&_Item {
 			display: grid;
-			grid-template-columns: min-content min-content;
 			align-items: center;
 			align-content: center;
-			column-gap: 8px;
 			padding: 4px;
-			background-color: #f1f1f1;
-			border-radius: 4px;
+			background-color: $greyLight;
+			border-radius: $radius;
 			white-space: nowrap;
 			float: left;
 			margin: 0 4px 4px 0;
@@ -213,7 +202,26 @@ $desktop-breakpoint: 1024px;
 			&:focus,
 			&:focus-visible {
 				outline: none;
-				background-color: #e0e0e0;
+				background-color: $greyDark;
+			}
+
+			// With delete button
+			&--showDelete {
+				grid-template-columns: min-content min-content;
+				column-gap: 8px;
+
+				&:hover,
+				&:focus,
+				&:focus-visible {
+					.Msa_DeleteButton {
+						background-color: $red;
+				
+						&:before,
+						&:after {
+							background-color: #fff;
+						}
+					}
+				}
 			}
 		}
 
@@ -235,6 +243,10 @@ $desktop-breakpoint: 1024px;
 			&:focus,
 			&:focus-visible {
 				outline: none;
+				
+				.Msa_ClearAllButton {
+					fill: $red;
+				}
 			}
 		}
 
@@ -245,7 +257,7 @@ $desktop-breakpoint: 1024px;
 
 		&::after {
 			display: block;
-			content: "";
+			content: '';
 			clear: both;
 		}
 	}
@@ -261,7 +273,7 @@ $desktop-breakpoint: 1024px;
 	&_MoreItem {
 		padding: 4px;
 		background-color: #fdfdfd;
-		border-radius: 4px;
+		border-radius: $radius;
 		white-space: nowrap;
 		float: left;
 		margin: 0 4px 4px 0;
@@ -273,6 +285,7 @@ $desktop-breakpoint: 1024px;
 		position: absolute;
 		z-index: 2;
 		background: #fff;
+		box-shadow: 5px 5px 5px -2px rgba(0,0,0,0.25);
 
 		// Suggestion list
 		ul {
@@ -282,12 +295,12 @@ $desktop-breakpoint: 1024px;
 			max-height: 300px;
 			overflow-x: auto;
 			border: 1px #d4d4d4 solid;
-			border-radius: 4px;
+			border-radius: $radius;
 
 			@include scrollBarStyle;
 
-			.MultiSelectAdvanced_FilterList_Item {
-				padding: 4px;
+			.Msa_FilterList_Item {
+				padding: 4px 6px;
 				cursor: pointer;
 
 				&:hover,
@@ -307,49 +320,49 @@ $desktop-breakpoint: 1024px;
 	}
 
 	&--loading {
-		.MultiSelectAdvanced_FilterInput {
+		.Msa_FilterInput {
 			grid-template-columns: 1fr min-content;
 			column-gap: 8px;
 		}
-		.MultiSelectAdvanced_Loading {
+		.Msa_Loading {
 			display: block;
 		}
 	}
 
 	&--disabled {
-		.MultiSelectAdvanced_FilterInput {
+		.Msa_FilterInput {
 			background-color: #e4e4e4;
 		}
 	}
 
 	// Text Wrap
-	&--noWrap .MultiSelectAdvanced_SelectionList_Item { 
+	&--noWrap .Msa_SelectionList_Item { 
 		white-space: nowrap;
 	}
 
 	// Open
 	&--open {
-		.MultiSelectAdvanced_FilterList { display: grid; }
+		.Msa_FilterList { display: grid; }
 	}
 
 	// Alignment
 	&--top {
-		.MultiSelectAdvanced_FilterList { top: 0; }
+		.Msa_FilterList { top: 0; }
 	}
 
 	&--bottom {
-		.MultiSelectAdvanced_FilterList { bottom: 0; }
+		.Msa_FilterList { bottom: 0; }
 	}
 
 	&--left {
-		.MultiSelectAdvanced_FilterList { 
+		.Msa_FilterList { 
 			left: -1px;
 			text-align: left;
 		}
 	}
 
 	&--right {
-		.MultiSelectAdvanced_FilterList { 
+		.Msa_FilterList { 
 			right: 0;
 			text-align: right;
 		}
